--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .parent{
+            height: 80v;
+            width: 60vh;
+            background-color: red;
+        }
+        .child{
+            font-size: 2em;
+        }
+
+    </style>
 </head>
 <body>
-    Hello world
-    THis is my first text
+   <div class="parent">
+    parent
+    <div class="child">
+        child
+    </div>
+   </div>
 </body>
 </html>
