--- a/pract.html
+++ b/pract.html
@@ -14,6 +14,7 @@
       aside {
         background-color: rgb(227, 224, 230);
         margin: 5px;
+        width: 120px;
         border: 0.5px solid rgb(148, 147, 147);
         
       }
@@ -28,8 +29,9 @@
       .container {
         box-sizing: border-box;
         background-color: whitesmoke;
-        width: 100%;
+        width: 95%;
         height: 700px;
+        margin: auto;
       }
       .box {
         background-color: rgb(233, 233, 237);
